force-app/main/default/objects/Round_Robin__c/fields/Assign_Field__c.field-meta.xml
<CustomField>
    <fullName>Assign_Field__c</fullName>
    <label>Assign Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>