force-app/main/default/objects/Round_Robin__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <label>Criteria</label>
    <length>250</length>
    <type>Text</type>
</CustomField>