force-app/main/default/objects/Round_Robin__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>API Name of Object</description>
    <label>Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>